--- a/.github/workflows/hawkscan.yml
+++ b/.github/workflows/hawkscan.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   stackhawk:
     runs-on: ubuntu-latest
+    
+    permissions:
+      security-events: write
 
     steps:
       - name: Checkout code
